Prevent feedback menu wrapping for long medialist names

--- a/client/templates/contact/details.import.less
+++ b/client/templates/contact/details.import.less
@@ -112,6 +112,8 @@ a.contact-menu-option {
 }
 
 .activity-menu {
+  overflow-x: visible;
+  white-space: nowrap;
   font-size: 0;
   margin: 15px 0 25px;
   padding: 0;
